Added /calculte API
